<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Postage Calculator</string>
    <string name="package_type">Package Type:</string>
    <string name="weight">Weight:</string>
	<string name="weight_hint">weight in oz</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_help">Rules and Restrictions</string>
	<string name="calculate">Calculate</string>
	<string name="total">Postage Total:</string>
	<string name="oz">oz</string>

</resources>
