<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

	<LinearLayout
		android:id="@+id/typeLayout"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center_vertical"
		android:layout_marginBottom="10dp">

		<TextView
			android:text="@string/package_type"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="10dp"/>

		<Spinner
			android:id="@+id/packageTypeSpinner"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="10dp"/>

		<ImageView
			android:id="@+id/questionMark"
			android:layout_width="32dp"
			android:layout_height="32dp"
			android:src="@drawable/question_mark"/>

	</LinearLayout>

	<LinearLayout
		android:id="@+id/weightLayout"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_below="@id/typeLayout"
		android:layout_marginBottom="10dp">

		<TextView
			android:id="@+id/weightLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/weight"
			android:layout_marginRight="10dp"/>

		<EditText
			android:id="@+id/weightInput"
			android:layout_width="130dp"
			android:layout_height="wrap_content"
			android:hint="@string/weight_hint"
			android:inputType="numberDecimal"
			android:imeActionLabel="@string/calculate"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/oz"/>

	</LinearLayout>

	<Button
		android:id="@+id/calculateButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/weightLayout"
		android:text="@string/calculate"
		android:layout_marginBottom="15dp"/>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_below="@id/calculateButton"
		android:gravity="center_horizontal"
		android:layout_centerHorizontal="true">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/total"
			android:textStyle="bold"
			android:textSize="20sp"
			android:layout_marginBottom="20dp"/>

		<TextView
			android:id="@+id/total"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="#ff47b451"
			tools:text="$.86"
			android:textSize="60sp"/>

	</LinearLayout>

</RelativeLayout>
